Fix interface files reader from the wrong location